Bug #17752 Crash in test "rpl_multi_engine" in "master_pos_wait()"
Submitted: 27 Feb 2006 19:26 Modified: 27 Feb 2006 21:32
Reporter: Joerg Bruehe Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Replication Severity:S1 (Critical)
Version:5.1.7-beta OS:Unix (18 platforms)
Assigned to: Lars Thalmann CPU Architecture:Any

[27 Feb 2006 19:26] Joerg Bruehe
Description:
Occurred in the release build of 5.1.7-beta, based on ChangeSet
  1.2167 06/02/26 01:16:11 kent@mysql.com +2 -0
  log_event.cc:
    Visual C++ dont relate 'byte' and 'char*' that close, added casts
  mysql.sln:
    Only build mysqlserver.lib if embedded target

Did not occur in previous builds (last week)!

=====
rpl_multi_engine               [ fail ]

Errors are (from PATH/mysqltest-time) :
mysqltest: In included file "./include/rpl_multi_engine.inc": At line 9: failed in select master_pos_wait('master-bin.00000
1', 1778): 2013: Lost connection to MySQL server during query
(the last lines may be the most important ones)

Ending Tests
=====
OCCURRED:
bsd53-5.1-community.log   normal+rowrepl
bsd53-5.1-community.log   ps+rowrepl+NDB
etpglb0-5.1-community.log   normal+rowrepl
etpglb0-5.1-community.log   ps+rowrepl+NDB
rhas3-x86-glibc23-5.1-community.log   normal+rowrepl
rhas3-x86-glibc23-5.1-community.log   ps+rowrepl+NDB
sol10-amd64-a-5.1-community.log   normal+rowrepl
sol10-amd64-a-5.1-community.log   ps+rowrepl+NDB
sol10-x86-5.1-community.log   normal+rowrepl
sol10-x86-5.1-community.log   ps+rowrepl+NDB
aix52-5.1-community.log   normal+rowrepl
aix52-5.1-community.log   ps+rowrepl+NDB
aix52-64bit-5.1-community.log   normal+rowrepl
aix52-64bit-5.1-community.log   ps+rowrepl+NDB
cane-5.1-community.log   normal+rowrepl
cane-5.1-community.log   ps+rowrepl+NDB
cane-linuxthreads-5.1-community.log   normal+rowrepl
cane-linuxthreads-5.1-community.log   ps+rowrepl+NDB
intelxeon3-5.1-community.log   normal+rowrepl
intelxeon3-5.1-community.log   ps+rowrepl+NDB
opnsrv6c-5.1-community.log   normal+rowrepl
opnsrv6c-5.1-community.log   ps+rowrepl+NDB
production-icc-glibc23-5.1-community.log   normal+rowrepl
production-icc-glibc23-5.1-community.log   ps+rowrepl+NDB
sol10-sparc-a-5.1-community.log   normal+rowrepl
sol10-sparc-a-5.1-community.log   ps+rowrepl+NDB
sol10-sparc-a-64bit-5.1-community.log   normal+rowrepl
sol9x86-5.1-community.log   normal+rowrepl
sol9x86-5.1-community.log   ps+rowrepl+NDB
sunfire100b-5.1-community.log   normal+rowrepl
sunfire100b-5.1-community.log   ps+rowrepl+NDB
sunfire100c-5.1-community.log   normal+rowrepl
sunfire100c-5.1-community.log   ps+rowrepl+NDB
osx-imac-x86-5.1-community.log   ps+rowrepl+NDB

How to repeat:
Occurred while running the test suite.
[27 Feb 2006 21:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3216
[27 Feb 2006 21:21] Lars Thalmann
This fix was pushed into 5.1.7 release clone.  

The bug never occurred in any public release, so I don't think any documentation needed.
[27 Feb 2006 21:32] Paul DuBois
No changelog entry needed.