BUG#17752: Non-allocated memory caused core in rpl_multi_engine test

sql/log_event.cc:
  Removed optimization that is no longer valid